# storsth

./: README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: pypi-publish.yml
